# function-naming-convention

./: .editorconfig  .mdl_style.rb  .pre-commit-config.yaml  .yamllint  Dockerfile  HOWTO.md  Makefile  README.md  pyproject.toml  tools.mk
.github/: dependabot.yml
.github/workflows/: functions.yml  release.yml
example/: README.md  composition.yaml  context.yaml  functions.yaml  xr.yaml
function/: __version__.py  constants.py  fn.py  main.py
package/: crossplane.yaml
package/input/: inputs.yaml
tests/: test_fn.py
